# coverdl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
coverdl/: __init__.py  cache.py  cli.py  console.py  cover.py  download.py  exceptions.py  metadata.py  options.py  upgrade.py  utils.py
coverdl/providers/: __init__.py  apple_music.py  base.py  deezer.py  discogs.py  itunes.py  provider.py  source.py
tests/: test_cli.py  test_download.py  test_providers.py
