[tool.poetry]
name = "coverdl"
version = "0.1.0"
description = "A command-line tool for downloading high quality album cover art"
authors = ["viown <48097677+viown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
coverdl = "coverdl.cli:coverdl"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
requests = "^2.32.3"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
